# haskell-parser

./: CHANGELOG.md  HaskellParser.hs  Module.hs  README.md  Structure.hs  Token.hs  TopLevel.hs  compile.hs  parsel.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
json-example/: Test.hs  test.json
json-example/Text/Parsel/: Char.hs  Primitives.hs
parsec-test/: Test.hs
step-1/: README.md  Test.hs
step-1/Text/: Parsel.hs
step-1/Text/Parsel/: Primitives.hs
step-2/: Test.hs
step-2/Text/: Parsel.hs
step-2/Text/Parsel/: Error.hs  Primitives.hs
step-3/: Test.hs
step-3/Text/: Parsel.hs
step-3/Text/Parsel/: Primitives.hs
step-4/: Test.hs
step-4/Text/: Parsel.hs
step-4/Text/Parsel/: Char.hs  Primitives.hs
step-5/Text/Parsel/: Error.hs  Pos.hs  Primitives.hs
